<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="@color/md_surface_container_high"
    android:paddingStart="8dp"
    android:paddingEnd="8dp">

    <TextView
        android:id="@+id/headerDateText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_size_report_header"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.15" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/product"
        android:textColor="@color/text_secondary"
        android:textSize="@dimen/text_size_report_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/headerQtyText"
        app:layout_constraintStart_toEndOf="@+id/headerDateText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.35" />

    <TextView
        android:id="@+id/headerQtyText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/qty"
        android:textColor="@color/text_secondary"
        android:textSize="@dimen/text_size_report_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/headerNetText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.1" />

    <TextView
        android:id="@+id/headerNetText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/net_sales"
        android:textColor="@color/text_secondary"
        android:textSize="@dimen/text_size_report_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/headerDiscountText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.2" />

    <TextView
        android:id="@+id/headerDiscountText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/discount"
        android:textColor="@color/text_secondary"
        android:textSize="@dimen/text_size_report_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>